--- a/src/app/modules/salaries/components/add-salary/add-salary.component.html
+++ b/src/app/modules/salaries/components/add-salary/add-salary.component.html
@@ -24,7 +24,7 @@
       >
         <div class="" *ngIf="currentStep === 1">
           <div class="">
-            <app-add-salary-progress-bar [value]="1" [maxValue]="3" />
+            <app-form-progress-bar [value]="1" [maxValue]="3" />
           </div>
 
           <div class="input-container">
@@ -146,7 +146,7 @@
 
         <div class="" *ngIf="currentStep === 2">
           <div class="">
-            <app-add-salary-progress-bar [value]="2" [maxValue]="3" />
+            <app-form-progress-bar [value]="2" [maxValue]="3" />
           </div>
 
           <div class="input-container">
@@ -245,7 +245,7 @@
 
         <div class="" *ngIf="currentStep === 3">
           <div class="">
-            <app-add-salary-progress-bar [value]="3" [maxValue]="3" />
+            <app-form-progress-bar [value]="3" [maxValue]="3" />
           </div>
 
           <div class="input-container">
