--- a/src/app/modules/companies/components/add-review-page/add-review-page.component.html
+++ b/src/app/modules/companies/components/add-review-page/add-review-page.component.html
@@ -18,18 +18,21 @@
         <div *ngIf="formStep === 1">
           <div class="mb-5 first-step-text">
             <p>
-              Отзывы полностью анонимны. Вы можете смело оставить отзыв и
-              открыть страницу компании при начальстве и коллегах, и система
-              никаким образом не покажет, что вы тут уже были. Не переживайте,
-              если не увидели свой отзыв сразу после добавления - отзывы
-              проходят модерацию.
+              1. Отзывы <span class="fw-bold">полностью анонимны</span>. Вы
+              можете смело оставить отзыв и открыть страницу компании при
+              начальстве и коллегах, и система никаким образом не покажет, что
+              вы тут уже были.
             </p>
             <p>
-              Отзывы нельзя редактировать после отправки, но можно оставлять
+              2. Не переживайте, если не увидели свой отзыв сразу после
+              добавления - отзывы проходят модерацию.
+            </p>
+            <p>
+              3. Отзывы нельзя редактировать после отправки, но можно оставлять
               <span class="fw-bold">каждые 3 месяца</span> новый.
             </p>
             <p class="">
-              Отзыв - это всегда субъективно, однако будьте, пожалуйста,
+              4. Отзыв - это всегда субъективно, однако будьте, пожалуйста,
               объективны настолько, насколько это возможно, чтобы помочь другим
               узнать больше о компании.
             </p>
