--- a/src/app/modules/companies/components/companies-page/companies-page.component.html
+++ b/src/app/modules/companies/components/companies-page/companies-page.component.html
@@ -8,7 +8,7 @@
           <div class="col-md-6 mb-1">
             <input
               type="text"
-              placeholder="Название компании для поиска. Минимум 3 символа."
+              placeholder="Поиск. Минимум 3 символа."
               class="form-control"
               id="searchQuery"
               [(ngModel)]="searchQuery"
