--- a/src/app/modules/admin/components/admin-start-page/admin-start-page.component.html
+++ b/src/app/modules/admin/components/admin-start-page/admin-start-page.component.html
@@ -2,7 +2,7 @@
 
 <div class="container my-5">
   <div class="row" *ngIf="dashboardData">
-    <div class="col-md-4">
+    <div class="col-md-4 mb-3">
       <div class="card card-body p-3">
         <div class="h5">Средняя оценка статистики</div>
         <app-star-rating-readonly
@@ -19,7 +19,7 @@
       </div>
     </div>
 
-    <div class="col-md-4">
+    <div class="col-md-4 mb-3">
       <div class="card card-body p-3">
         <div class="h5">Кол-во анкет ЗП</div>
         <div class="mt-1 h2">
@@ -28,7 +28,7 @@
       </div>
     </div>
 
-    <div class="col-md-4">
+    <div class="col-md-4 mb-3">
       <div class="card card-body p-3">
         <div class="h5">Кол-во отзывов на компании</div>
         <div class="mt-1 h2">
