--- a/src/app/modules/home/components/home/home.component.html
+++ b/src/app/modules/home/components/home/home.component.html
@@ -148,10 +148,8 @@
 <ng-template #noUwu>
   <div class="no-uwu-content">
     <div class="mt-3 mb-1 text-center">
-      <div>
-        <span class="display-1 fw-bolder">Techinterview.space</span>
-      </div>
-      <div class="lead">
+      <div class="website-title">Techinterview.space</div>
+      <div class="website-subtitle">
         Зарплаты в IT, отзывы, заметки к техническим интервью.
       </div>
     </div>
@@ -160,7 +158,7 @@
       <img
         src="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/main_transparent_1000.png"
         alt="Interviewer"
-        class="img-fluid w-50"
+        class="website-image"
       />
     </div>
   </div>
