--- a/src/app/modules/companies/components/recent-reviews/recent-reviews-page.component.scss
+++ b/src/app/modules/companies/components/recent-reviews/recent-reviews-page.component.scss
@@ -1,6 +1,5 @@
-.company-list-item {
+.review-list-item {
   transition: all 0.3s ease;
-  cursor: pointer;
   border-radius: 10px;
   padding-left: 24px;
   padding-right: 24px;
@@ -8,22 +7,10 @@
   padding-bottom: 16px;
   border: 1px solid #e0e0e0;
   color: rgb(33, 37, 41);
+  background-color: #fff;
 
   &:hover {
     transform: scale(1.05);
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
-  }
-}
-
-.company-list {
-  padding: 16px 24px;
-}
-
-.tg-link {
-  color: rgb(33, 37, 41);
-  text-decoration: none;
-
-  &:hover {
-    text-decoration: underline;
   }
 }
